<resources>
    <string name="app_name">playtime</string>
    <string name="hello_world">Hello world!</string>
    <string name="change_text">Change text</string>
    <string name="action_settings">Settings</string>
    <string name="action_editmode_none">Fire!</string>
    <string name="action_editmode_background_color">Set background</string>
    <string name="action_editmode_background_image">Set image</string>
    <string name="action_editmode_text">Edit text</string>
    <string name="default_char">我</string>
    <string name="default_pinyin">wŏ</string>
</resources>
